cabal-version: 3.0
name:          euler-hs
version:       3.3.2.0
synopsis:      The Flow framework for Euler.
description:
homepage:       https://github.com/juspay/euler-hs
license:
author:        Juspay Technologies Pvt Ltd
maintainer:    euler@juspay.in
copyright:     (C) Juspay Technologies Pvt Ltd 2019-2020
category:      Euler
build-type:    Simple
tested-with:   GHC ==8.8.4 || ==8.10.7
source-repository head
  type:     git
  location:  https://github.com/juspay/euler-hs

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror
    -fplugin=RecordDotPreprocessor
     
  build-depends:
    , base
    , record-dot-preprocessor
    , record-hasfield
    , euler-events-hs

  default-extensions:
    NoImplicitPrelude
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    OverloadedLabels
    OverloadedStrings
    TupleSections
    TypeApplications
    TypeFamilies
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    EulerHS.CachedSqlDBQuery
    EulerHS.Extra.AltValidation
    EulerHS.Extra.Aeson
    EulerHS.Extra.Combinators
    EulerHS.Extra.Test
    EulerHS.Extra.Time
    EulerHS.Extra.Validation
    EulerHS.Interpreters
    EulerHS.Language
    EulerHS.Prelude
    EulerHS.Runtime
    EulerHS.Types
    EulerHS.SqlDB.Language
    EulerHS.KVConnector.DBSync 
    EulerHS.KVConnector.Encoding
    EulerHS.KVConnector.Flow
    EulerHS.KVConnector.Metrics
    EulerHS.KVConnector.Types
    EulerHS.Logger.Types
    EulerHS.KVConnector.InMemConfig.Types
    EulerHS.KVConnector.Utils
    EulerHS.Extra.Regex
    EulerHS.Masking
    EulerHS.Extra.URLSanitization
    EulerHS.Extra.Snowflakes.Types
    EulerHS.Extra.Snowflakes.Flow
    EulerHS.Extra.Monitoring.Types
    EulerHS.Extra.Monitoring.Flow
    EulerHS.KVConnector.InMemConfig.Flow
    EulerHS.ART.Utils
    EulerHS.ART.EnvVars
    EulerHS.ART.FlowUtils
    EulerHS.ART.Types
    EulerHS.ApiHelpers
    EulerHS.ART.ReplayFunctions
    EulerHS.PIIEncryption

  other-modules:
    EulerHS.Api
    EulerHS.ART.DBReplay
    EulerHS.BinaryString
    EulerHS.Common
    EulerHS.Extra.Language
    EulerHS.Framework.Interpreter
    EulerHS.Framework.Language
    EulerHS.Framework.Runtime
    EulerHS.HttpAPI
    EulerHS.KVDB.Interpreter
    EulerHS.KVDB.Language
    EulerHS.KVDB.Types
    EulerHS.Logger.Interpreter
    EulerHS.Logger.Language
    EulerHS.Logger.Runtime
    EulerHS.Logger.TinyLogger
    EulerHS.Options
    EulerHS.PubSub.Interpreter
    EulerHS.PubSub.Language
    EulerHS.SqlDB.Interpreter
    EulerHS.SqlDB.MySQL
    EulerHS.SqlDB.Postgres
    EulerHS.SqlDB.Types
    EulerHS.Extra.Orphans

  build-depends:
    , QuickCheck
    , aeson
    , aeson-pretty
    , base64-bytestring
    , beam-core
    , beam-mysql
    , beam-postgres
    , beam-sqlite
    , bytestring
    , case-insensitive
    , casing
    , cereal
    , connection
    , containers
    , cryptostore
    , ctrie
    , data-default
    , directory
    , dlist
    , exceptions
    , extra
    , fmt
    , formatting
    , free
    , generic-deriving
    , generic-lens
    , hedis             
    , http-api-data
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , juspay-extra
    , lrucache
    , lrucaching
    , mysql-haskell
    , named
    , newtype-generics
    , nonempty-containers
    , nonempty-vector
    , optics-core
    , pem
    , postgresql-simple
    , process
    , profunctors
    , random
    , reflection
    , resource-pool
    , safe
    , scientific
    , sequelize             
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , sqlite-simple
    , stm
    , store
    , string-conversions
    , text
    , time
    , tinylog
    , tls
    , transformers
    , unagi-chan
    , universum
    , unordered-containers
    , utf8-string
    , uuid
    , validation
    , validation-selective
    , vector
    , x509
    , x509-store
    , x509-system
    , x509-validation
    , safe-exceptions
    , pcre-heavy
    , pcre-light
    , attoparsec
    , tasty-hunit
    , mtl

  hs-source-dirs:  src

test-suite language
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    ArtSpec
    -- CachedDBSpec
    Client
    Common
    DBSetup
    EulerHS.TestData.Types
    EulerHS.Testing.Flow.Interpreter
    EulerHS.Testing.Types
    HttpAPISpec
    FlowSpec
    KVDBArtSpec
    MaskingSpec
    PubSubSpec
    Scenario1
    SQLArtSpec

  build-depends:
    , aeson
    , aeson-pretty
    , async
    , beam-core
    , beam-sqlite
    , beam-mysql
    , bytestring
    , containers
    , data-default
    , directory
    , euler-hs
    , extra
    , filepath
    , generic-arbitrary
    , generic-lens
    , hedis
    , hspec
    , http-client
    , http-client-tls
    , named
    , process
    , QuickCheck
    , quickcheck-instances
    , random
    , safe-exceptions
    , sequelize
    , servant
    , servant-client
    , servant-mock
    , servant-server
    , string-conversions
    , text
    , tls
    , typed-process
    , unordered-containers
    , uuid
    , vector
    , warp
    , warp-tls
    , x509-store
    , tls
    , connection
    , time
    , tinylog
    , template-haskell
    , casing
    , scientific
    , hspec-core
    , cereal

  ghc-options:    -threaded -O2
  hs-source-dirs: test/language

test-suite db
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    KVDB.KVDBSpec
    SQLDB.TestData.Connections
    SQLDB.TestData.Scenarios.MySQL
    SQLDB.TestData.Scenarios.Postgres
    SQLDB.TestData.Scenarios.SQLite
    SQLDB.TestData.Types
    SQLDB.Tests.MySQLDBSpec
    SQLDB.Tests.PostgresDBSpec
    SQLDB.Tests.QueryExamplesSpec
    SQLDB.Tests.SQLiteDBSpec

  build-depends:
    , aeson
    , beam-core
    , beam-mysql
    , beam-postgres
    , beam-sqlite
    , bytestring
    , euler-hs
    , hspec
    , mysql-haskell
    , postgresql-simple
    , process
    , servant
    , servant-mock
    , time

  hs-source-dirs: testDB

test-suite extra
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Options
    SnowflakesSpec

  build-depends:
    , aeson
    , euler-hs
    , hspec
    , bytestring
    , containers
    , unordered-containers
    , async
    , tinylog
    , directory
    , text
    , time

  hs-source-dirs: test/extra, test/common